--- a/alacritty.toml
+++ b/alacritty.toml
@@ -1,29 +1,50 @@
 [colors.bright]
-black = "0x575860"
-blue = "0x86abdc"
-cyan = "0x7ad5d6"
-green = "0x8ebaa4"
-magenta = "0xbaa1e2"
-red = "0xd16983"
-white = "0xe4e4e5"
-yellow = "0xe0c989"
+black = "#5a5b5c"
+red = "#a37679"
+green = "#87a376"
+yellow = "#a39b76"
+blue = "#758ba3"
+magenta = "#9f76a3"
+cyan = "#899ca1"
+white = "#f8f8f2"
+#black = "0x575860"
+#blue = "0x86abdc"
+#cyan = "0x7ad5d6"
+#green = "0x8ebaa4"
+#magenta = "0xbaa1e2"
+#red = "0xd16983"
+#white = "0xe4e4e5"
+#yellow = "0xe0c989"
 
 [colors.normal]
-black = "0x393b44"
-blue = "0x719cd6"
-cyan = "0x63cdcf"
-green = "0x81b29a"
-magenta = "0x9d79d6"
-red = "0xc94f6d"
-white = "0xdfdfe0"
-yellow = "0xdbc074"
+black = "#3d3e3d"
+red = "#755a5b"
+green = "#68755a"
+yellow = "#756e5a"
+blue = "#5b6976"
+magenta = "#755b76"
+cyan = "#465457"
+white = "#ccccc6"
+#black = "0x393b44"
+#blue = "0x719cd6"
+#cyan = "0x63cdcf"
+#green = "0x81b29a"
+#magenta = "0x9d79d6"
+#red = "0xc94f6d"
+#white = "0xdfdfe0"
+#yellow = "0xdbc074"
 
 [colors.primary]
-background = "0x011627"
-foreground = "0xcdcecf"
+background = "#000000"
+foreground = "#ffffff"
+#background = "0x011627"
+#foreground = "0xcdcecf"
 
 [env]
 TERM = "xterm-256color"
 
 [font]
-size = 10
+size = 13
+
+[font.normal]
+family = "Terminess Nerd Font"
