--- a/alacritty.toml
+++ b/alacritty.toml
@@ -1,12 +1,13 @@
 [colors.bright]
-black = "#5a5b5c"
-red = "#a37679"
-green = "#87a376"
-yellow = "#a39b76"
-blue = "#758ba3"
-magenta = "#9f76a3"
-cyan = "#899ca1"
-white = "#f8f8f2"
+black = '0x727169'
+red = '0xe82424'
+green ='0x98bb6c'
+yellow = '0xe6c384'
+blue = '0x7fb4ca'
+magenta = '0x938aa9'
+cyan = '0x7aa89f'
+white = '0xdcd7ba'
+
 #black = "0x575860"
 #blue = "0x86abdc"
 #cyan = "0x7ad5d6"
@@ -17,14 +18,15 @@ white = "#f8f8f2"
 #yellow = "0xe0c989"
 
 [colors.normal]
-black = "#3d3e3d"
-red = "#755a5b"
-green = "#68755a"
-yellow = "#756e5a"
-blue = "#5b6976"
-magenta = "#755b76"
-cyan = "#465457"
-white = "#ccccc6"
+black = '0x090618'
+red = '0xc34043'
+green = '0x76946a'
+yellow ='0xc0a36e'
+blue = '0x7e9cd8'
+magenta = '0x957fb8'
+cyan = '0x6a9589'
+white = '0xc8c093'
+
 #black = "0x393b44"
 #blue = "0x719cd6"
 #cyan = "0x63cdcf"
@@ -35,16 +37,23 @@ white = "#ccccc6"
 #yellow = "0xdbc074"
 
 [colors.primary]
-background = "#000000"
-foreground = "#ffffff"
+background = '0x1f1f28'
+foreground = '0xdcd7ba'
+
 #background = "0x011627"
 #foreground = "0xcdcecf"
+
+[colors.selection]
+background = '0x2d4f67'
+foreground ='0xc8c093'
 
 [env]
 TERM = "xterm-256color"
 
 [font]
-size = 13
+size = 11
 
 [font.normal]
-family = "Terminess Nerd Font"
+family = "Consolas"
+
+
